Update QrMenu domain model
